# CLabsNSU

./: .gitignore  README.md
lab-begin/src/: main.c
lab0/src/: main.c
lab1-0/src/: main.c
lab1-1/src/: main.c
lab1-2/src/: main.c
lab10/: CMakeLists.txt
lab10/include/: graham.h  stack.h
lab10/src/: graham.c  main.c  stack.c
lab11/: CMakeLists.txt
lab11/src/: main.c
lab2/src/: main.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/src/: main.c
lab5/: CMakeLists.txt
lab5/include/: bit_reader.h  bit_set.h  bit_writer.h  decode.h  encode.h  huffman.h  priority_queue.h
lab5/src/: bit_reader.c  bit_set.c  bit_writer.c  decode.c  encode.c  main.c  priority_queue.c
lab6-0/src/: main.c
lab6-1/src/: main.c
lab6-2/: CMakeLists.txt
lab6-2/include/: btree.h
lab6-2/src/: btree.c  main.c
lab6-3/: CMakeLists.txt
lab6-3/include/: trie.h
lab6-3/src/: main.c  trie.c
lab7/: CMakeLists.txt
lab7/include/: bit_set.h  graph.h  stack.h
lab7/src/: bit_set.c  graph.c  main.c  stack.c
lab8-0/: CMakeLists.txt
lab8-0/include/: dsu.h
lab8-0/src/: dsu.c  main.c
lab8-1/: CMakeLists.txt
lab8-1/include/: bit_set.h  graph.h
lab8-1/src/: bit_set.c  graph.c  main.c
lab9/: CMakeLists.txt
lab9/include/: bit_set.h  graph.h
lab9/src/: bit_set.c  graph.c  main.c
